--- a/resume.tex
+++ b/resume.tex
@@ -145,7 +145,7 @@
 \section{\textbf{Education}}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Bachelor of Technology in Computer Science and Engineering}{CGPA: 8.62*}
+      {Bachelor of Technology in Computer Science and Engineering}{CGPA: 8.56}
       {Hooghly Engineering and Technology College}{2021-25}
   \resumeSubHeadingListEnd
 \vspace{-5.5mm}
@@ -256,6 +256,19 @@
 \resumeSubHeadingListEnd
 \vspace{-5mm}
 
+\vspace{-0.4mm}
+\resumeSubHeadingListStart
+\resumePOR{Executive Committee Member } % Position
+    {UTKARSHA 2024, Cultural Fest} %Club,Event
+    {April 2024} %Tenure Period \\
+    \resumeItemListStart
+    \item {Helped in designing aesthetic background visuals for various events}
+    \item {Engaged is mixing audio tracks}
+    \resumeItemListEnd
+
+\resumeSubHeadingListEnd
+\vspace{-5mm}
+
 
 
 
@@ -276,4 +289,7 @@
 
 
 %-------------------------------------------
+\end{document}
+
+
 \end{document}
