Updated resume.tex on 02/05/2024

--- a/resume.tex
+++ b/resume.tex
@@ -162,6 +162,36 @@
   \resumeSubHeadingListEnd
 \vspace{-5.5mm}
 %
+%-----------Coursework skills-----------------
+\section{\textbf{Relevant Coursework}}
+ \begin{itemize}[leftmargin=0.05in, label={}]
+    \small{\item{
+ \textbf{Data Structures \& Algorithms }{:C, Java and Python} \\  
+     \textbf{Object Oriented Programming}{: Java, Python} \\
+    \textbf{Database Management System}{: SQL } \\ 
+     \textbf{Operating System }{: Linux and Microsoft Windows}\\ 
+ 
+\textbf{Software Engineering} \\
+     \textbf{Computer Networks} \\
+    }}
+ \end{itemize}
+ \vspace{-16pt}
+%-----------Technical skills-----------------
+\section{\textbf{Technical Skills and Interests}}
+ \begin{itemize}[leftmargin=0.05in, label={}]
+    \small{\item{
+     \textbf{Languages}{: Java, C, Python, Javascript, HTML,CSS } \\
+     \textbf{Libraries }{: Swing/AWT, Pandas, BeautifulSoup, Matplotlib }\\ 
+     \textbf{Web Dev Tools}{: VScode, Git, Github } \\ 
+     \textbf{Frameworks}{: ReactJs } \\
+     \textbf{Cloud/Databases}{:MongoDB, Relational Database(MySQL) } \\  
+\textbf{Areas of Interest}{: Data Science and Web Development} \\
+
+     
+     \textbf{Soft Skills}{: Problem Solving, Self-learning, Presentation, Adaptability} \\
+    }}
+ \end{itemize}
+ \vspace{-16pt}
 %-----------PROJECTS-----------------
 \section{\textbf{Personal Projects}}
 \resumeSubHeadingListStart
@@ -222,22 +252,7 @@
 
 
 
-%-----------Technical skills-----------------
-\section{\textbf{Technical Skills and Interests}}
- \begin{itemize}[leftmargin=0.05in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Java, C, Python, Javascript, HTML,CSS } \\
-     \textbf{Libraries }{: Swing/AWT, Python Libraries, ReactJs }\\ 
-     \textbf{Web Dev Tools}{: VScode, Git, Github } \\ 
-     \textbf{Frameworks}{: ReactJs } \\
-     \textbf{Cloud/Databases}{:MongoDB, Relational Database(MySQL) } \\  
-     
-     \textbf{Relevent Coursework}{: Data Structures \& Algorithms, Operating Systems, Object Oriented Programming, Database Management System, Software Engineering. } \\ 
-     \textbf{Areas of Interest}{: Web Design and Development, UI/UX Design} \\
-     \textbf{Soft Skills}{: Problem Solving, Self-learning, Presentation, Adaptability} \\
-    }}
- \end{itemize}
- \vspace{-16pt}
+
 
 
 
