Updated resume.tex on 5/05/2024
Added link to spotify ui clone
Explained more about projects

--- a/resume.tex
+++ b/resume.tex
@@ -166,10 +166,10 @@
 \section{\textbf{Relevant Coursework}}
  \begin{itemize}[leftmargin=0.05in, label={}]
     \small{\item{
- \textbf{Data Structures \& Algorithms }{:C, Java and Python} \\  
-     \textbf{Object Oriented Programming}{: Java, Python} \\
-    \textbf{Database Management System}{: SQL } \\ 
-     \textbf{Operating System }{: Linux and Microsoft Windows}\\ 
+ \textbf{Data Structures \& Algorithms }{} \\  
+     \textbf{Object Oriented Programming}{} \\
+    \textbf{Database Management System}{ } \\ 
+     \textbf{Operating System }{}\\ 
  
 \textbf{Software Engineering} \\
      \textbf{Computer Networks} \\
@@ -180,15 +180,12 @@
 \section{\textbf{Technical Skills and Interests}}
  \begin{itemize}[leftmargin=0.05in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, C, Python, Javascript, HTML,CSS } \\
+     \textbf{Languages}{: Java, C, Python, HTML,CSS , Javascript} \\
      \textbf{Libraries }{: Swing/AWT, Pandas, BeautifulSoup, Matplotlib }\\ 
-     \textbf{Web Dev Tools}{: VScode, Git, Github } \\ 
+     \textbf{Tools}{: VScode, Git, Github } \\ 
      \textbf{Frameworks}{: ReactJs } \\
-     \textbf{Cloud/Databases}{:MongoDB, Relational Database(MySQL) } \\  
+     \textbf{Cloud/Databases}{Relational Database(MySQL) } \\  
 \textbf{Areas of Interest}{: Data Science and Web Development} \\
-
-     
-     \textbf{Soft Skills}{: Problem Solving, Self-learning, Presentation, Adaptability} \\
     }}
  \end{itemize}
  \vspace{-16pt}
@@ -198,24 +195,26 @@
     \resumeProject
       {Bank Management System(Employee Side)} %Project Name
       {A system based application to monitor banking activities} %Project Name, Location Name
-      {} %Event Dates
+      {Oct 23 - Nov 23} %Event Dates
 
       \resumeItemListStart
-        \item {Facilitating employee login to their dashboard with known credentials}
-        \item {Technology Used: Java (Swing, JDBC, AWT), HTML, MySQL}
+        \item {Developed and fine-tuned a employee side bank management system to monitor day to day banking activities}
+        \item {Facilitating employee login to their dashboard with known credentials with an user friendly UI}
+        \item {Maximized data security using local database for storage of confidential information}
+        
         
     \resumeItemListEnd
     \vspace{-2mm}
     
     \resumeProject
       {Mini Projects} %Project Name
-      {React based web greeting cards  } %Project Name, Location Name
+      {Front-end projects} %Project Name, Location Name
       {} %Event Dates
 
       \resumeItemListStart
         
-        \item {Technology Used: HTML/CSS, Javascript, Bootstrap}
-        \item{Library: React.js}
+        \item {Spotify UI Clone}\hspace{1mm}    \href{https://arkodipdas.github.io/Spotify-UI-Clone/af.com}{\textbf{LINK}}
+        \item{Animated Greeting Card}
         \item {Used Github Pages for Deployment}
     \resumeItemListEnd
     \vspace{-2mm}
@@ -235,7 +234,8 @@
       {}{Sept 2021 - Present}
       \vspace{-2.0mm}
       \resumeItemListStart
-    \item {In-depth understanding of brand engagement principles}
+      \item {Involved in various interactive sessions with industry experts from companies and brands like ITC, Mahindra, Ajio, Bose, etc}
+    \item {Received in-depth understanding of brand engagement principles}
     \item {Engaged in various online brand amplification tasks.}
     \item {Certified from brands like Mahindra and ITC }
     \resumeItemListEnd
