--- a/resume.tex
+++ b/resume.tex
@@ -184,7 +184,7 @@
      \textbf{Libraries }{: Swing/AWT, Pandas, BeautifulSoup, Matplotlib }\\ 
      \textbf{Tools}{: VScode, Git, Github } \\ 
      \textbf{Frameworks}{: ReactJs } \\
-     \textbf{Cloud/Databases}{Relational Database(MySQL) } \\  
+     \textbf{Databases}{Relational Database(MySQL) } \\  
 \textbf{Areas of Interest}{: Data Science and Web Development} \\
     }}
  \end{itemize}
@@ -201,24 +201,29 @@
         \item {Developed and fine-tuned a employee side bank management system to monitor day to day banking activities}
         \item {Facilitating employee login to their dashboard with known credentials with an user friendly UI}
         \item {Maximized data security using local database for storage of confidential information}
-        
-        
     \resumeItemListEnd
     \vspace{-2mm}
     
     \resumeProject
       {Mini Projects} %Project Name
-      {Front-end projects} %Project Name, Location Name
+      {Front End Projects} %Project Name, Location Name
       {} %Event Dates
 
       \resumeItemListStart
         
-        \item {Spotify UI Clone}\hspace{1mm}    \href{https://arkodipdas.github.io/Spotify-UI-Clone/af.com}{\textbf{LINK}}
+        \item {Spotify UI Clone}\hspace{5mm}    \href{https://arkodipdas.github.io/Spotify-UI-Clone/}{\textbf{LINK}}
         \item{Animated Greeting Card}
         \item {Used Github Pages for Deployment}
     \resumeItemListEnd
-    \vspace{-2mm}
-
+    \vspace{2mm}
+{Stock Market Web Scraper} 
+\vspace{1mm}
+  \resumeItemListStart
+        \item {Robust web scraping model which automatically visualises extracted stock market data}
+        \item {Language: Python}\hspace{5mm}   
+        \item{Libraries: yfinance,pandas and matplotlib}
+        
+    \resumeItemListEnd
   
    
       
